--- a/kube/deployment.yaml
+++ b/kube/deployment.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: hello-python-service
+  name: webapp-service
 spec:
   selector:
-    app: hello-python
+    app: webapp
   ports:
   - protocol: "TCP"
     port: 5005
@@ -15,20 +15,20 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: hello-python
+  name: webapp
 spec:
   selector:
     matchLabels:
-      app: hello-python
+      app: webapp
   replicas: 2
   template:
     metadata:
       labels:
-        app: hello-python
+        app: webapp
     spec:
       containers:
-      - name: hello-python
-        image: hello-python:latest
+      - name: webapp
+        image: ecrurl:latest
         imagePullPolicy: Never
         env:
         - name: ATC_USERNAME
